# mesoshop

./: .env.example  .env.upload-backup  .gitignore  .pre-commit-config.yaml  ADAPTATION_COMPLETE_SUMMARY.md  ASTRO_COMPONENTS_V2.md  ASTRO_INTEGRATION.md  INSTALL.md  INTEGRATION_SUMMARY.md  LICENSE  Makefile  PRODUCT_TEMPLATES_ADAPTATION.md  README.md  TEMPLATE_ADAPTATION_PART2_SUMMARY.md  TROUBLESHOOTING.md  UPGRADE.md  docker-compose.yml  migrate_bootstrap.py  pyproject.toml  vercel.json
.github/workflows/: Lint.yml  ci.yml  deploy.yml
app/: __init__.py  main.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  cart.py  order.py  product.py  user.py
app/schemas/: __init__.py  auth.py  cart.py  order.py  product.py  user.py
app/services/: auth_service.py  product_service.py
docs/: fastapi-ecommerce-guide.md
moneymaker2/Moneymaker2_v.2.7.3_quickstart/: quickstart.sql  readme.txt
moneymaker2/Moneymaker2_v/Documentation/: index.htm
moneymaker2/Moneymaker2_v/Licensing/: licensing.txt
moneymaker2/Moneymaker_v.1.2.0/Documentation/: readme.html
moneymaker2/Moneymaker_v.1.2.0/Documentation/bootstrap/js/: docs.min.js
moneymaker2/Moneymaker_v.1.2.0/Licensing/: licensing.txt
moneymaker2/simple 4/: license_ru.html
moneymaker2/simple 4/misc/custom fields/opencart 2.0.x-2.2.x/: simple_custom_data_admin.ocmod.xml
moneymaker2/simple 4/misc/custom fields/opencart 2.3.x/: simple_custom_data_admin.ocmod.xml
moneymaker2/simple 4/misc/templates/journal3/: интеграция.txt
moneymaker2/simple 4/misc/templates/logancee 3.0/: simple_logancee.ocmod.xml
moneymaker2/simple 4/misc/templates/moneymaker2/: minicart.txt
moneymaker2/simple 4/misc/templates/oct_feelmart/: minicart.txt
moneymaker2/simple 4/misc/templates/storeflex/: readme.txt
moneymaker2/simple 4/misc/templates/theme_lightshop/: порядок интеграции.txt
moneymaker2/simple 4/misc/templates/yoga/: minicart.txt
scripts/: backup.sh  restore.sh
simple 4/: changelog.txt  faq_ru.html  install_ru.html  update_ru.html
simple 4/misc/custom fields/opencart 1.5.x/: simple_custom_data_catalog.xml
simple 4/misc/templates/bt_claudine/stylesheet/: simple.css
simple 4/misc/templates/ft_frame twig/: minicart.txt
simple 4/misc/templates/globethm/stylesheet/: simple.css
simple 4/misc/templates/journal3/stylesheet/: simple.css
simple 4/misc/templates/lexus_micmart/stylesheet/: simple.css
simple 4/misc/templates/madeshop/: порядок интеграции.txt
simple 4/misc/templates/madeshop/stylesheet/: simple.css
simple 4/misc/templates/oct_luxury/stylesheet/: simple.css
simple 4/misc/templates/oct_techstore/stylesheet/: simple.css
simple 4/misc/templates/oct_ultrastore/: minicart.txt
simple 4/misc/templates/rgen-opencart/stylesheet/: simple.css
simple 4/misc/templates/so-clickboom/stylesheet/: simple.css
simple 4/misc/templates/sstore/stylesheet/: simple.css
simple 4/misc/templates/storeset/stylesheet/: simple.css
simple 4/misc/templates/techboom/stylesheet/: simple.css
simple 4/misc/templates/technics/stylesheet/: simple.css
simple 4/misc/templates/theme604/stylesheet/: simple.css
simple 4/misc/templates/theme625/stylesheet/: simple.css
simple 4/misc/templates/themeXXX_black/stylesheet/: simple.css
simple 4/misc/templates/unico/stylesheet/: simple.css
simple 4/misc/templates/unicoding/stylesheet/: simple.css
simple 4/misc/templates/unishop/stylesheet/: simple.css
simple 4/misc/templates/welldone/stylesheet/: simple.css
simple 4/misc/templates/wokiee/stylesheet/: simple.css
simple 4/misc/usefull mods but not required/link to abandoned carts/opencart 1.5.x/: link_to_abandoned.xml
simple 4/misc/usefull mods but not required/link to abandoned carts/opencart 2.0.x-2.3.x/: link_to_abandoned.ocmod.xml
simple 4/misc/usefull mods but not required/send password in email/opencart 2.3.x/: password_in_email.ocmod.xml
storage_data/upload/: Refund-3819-7817.pdf.b208115a24df15bb9a99eaf146293ade
tests/: __init__.py  conftest.py  test_main.py
tools/: Dockerfile
upload/admin/view/template/cms/: comment.twig
upload/admin/view/template/common/: footer.twig  header.twig
upload/admin/view/template/tool/: notification.twig  notification_list.twig
upload/catalog/controller/account/: download.php  order.php  returns.php  reward.php  subscription.php  transaction.php
upload/catalog/controller/cms/: comment.php  topic.php
upload/catalog/controller/common/: currency.php
upload/catalog/controller/event/: activity.php  ssr.php  statistics.php
upload/catalog/controller/information/: contact.php  style_guide.php
upload/catalog/controller/mail/: subscription.php
upload/catalog/controller/product/: category.php  manufacturer.php  review.php  search.php  special.php
upload/catalog/controller/startup/: currency.php  error.php  task.php
upload/catalog/language/en-gb/cms/: article.php
upload/catalog/model/catalog/: product.php
upload/catalog/model/setting/: extension.php  task.php
upload/catalog/view/: loading-system-README.md
upload/catalog/view/javascript/: ajax-integration.js  loading-states.js  theme-switcher.js
upload/catalog/view/stylesheet/: astro-ecommerce.css  component-library.css  grid-utilities.css  loading.css  stylesheet.scss  theme-enhancements.css
upload/catalog/view/template/account/: account.twig  affiliate.twig  authorize_reset.twig  authorize_unlock.twig  download.twig  edit.twig  forgotten.twig  login.twig  newsletter.twig  order_history.twig  order_info.twig  order_list.twig  password.twig  register.twig  returns_form.twig  returns_history.twig  returns_list.twig  reward.twig  subscription_history.twig  subscription_info.twig  subscription_list.twig  subscription_order.twig  tracking.twig  transaction.twig  wishlist_list.twig
upload/catalog/view/template/checkout/: cart.twig  cart_list.twig  checkout.twig  confirm.twig  payment_address.twig  payment_method.twig  shipping_address.twig  shipping_method.twig  shopping_cart.twig
upload/catalog/view/template/cms/: article.twig  comment.twig  (+3 more)
upload/mesoshop-admin/: config.php
(+529 files in other folders)
